--- a/draft.tex
+++ b/draft.tex
@@ -96,9 +96,9 @@ We let $C(\textbf{p})=C(\ppref_1)\times \ldots \times C(\ppref_n)$ be the set of
 We also assume that the weights of the scoring rules are only partially specified.
 We use $W$ to denote the set of feasible weight vector.
 Without loss of generality, we assume $w_1=0$ and $w_m=0$.
-The preferences of the chair are incoded with linear constraints, for instance one may state
+The preferences of the chair are encoded with linear constraints, for instance one may state
 that $w_2>0.5$.
-A specific kind of preference may that of requiring the sequence of the weights to be convex, that means
+A specific kind of preference may require the sequence of the weights to be convex, that means
 that the difference of between the weight of the first position and the weight of the second position is at least as much as the difference between the weights of the second and third position, etc. 
 \[ \forall i \in \{1,\ldots,n\} \;\; w_i - w_{i+1} \geq w_{i+1}-w_{i+2} \iff  w_i - 2 w_{i+1} + w_{i+2} \geq 0 \]
 This is a constraint often used when aggregating rankings in sport competitions.
