--- a/draft.tex
+++ b/draft.tex
@@ -206,7 +206,7 @@ In the case of convex sequences, the optimization can be done without integer va
 \max_{\w} & \sum_{j=1}^{n}  [w_{\hat{v}_j(y)} - w_{\hat{v}_j(x)}] \\
 \text{s.t.} & \w \in W
 \end{align*}
-The space of feasible weights $W$ is encoded with linear constraints.
+The space of feasible weights $W$ is encoded with linear constraints that model the preferences of the committee.
 Therefore the pairwise maximum regret can be computed with a linear program.
  
  \item General case:
@@ -253,10 +253,10 @@ bound queries (Is this alternative among your top-k most preferred items?), comp
 %Define a score associated to each potential query that we may ask.
 
 \begin{itemize}
-\item Current solution strategy:
-%Assume $x$ is the minimax regret optimal alternative $y$ the adversarial choice
+\item Current solution strategy: consider the solution of the minimax regret game, 
+ $(x,y,w^{a},\profile^{a})$, where $x$ is the minimax regret optimal alternative, $y$ the adversarial choice, $w^{a}$ the weights, and $\profile^{a}$ the profile completed by the adversary.
 
-\item Non-iterleaved regret method:
+\item Non-iterleaved regret method: comparison with a method based on minimax regret, but not interleaved. 
 
  \item One possibility is to consider the MMR {\em a posteriori}.
 Assume that the different answers to a query induce the possible sets to be $(\pprofile_1,W_1)$ and $(\pprofile_2,W_2)$, then the score according to worst-case maximum regret is:
